# func_sharp

./: Cargo.toml  README.md  fizzbuzz.funcs  prime.funcs  test.funcs
benches/: benchmark.rs  prime.funcs
src/: error.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  parser.rs  util.rs
src/interpreter/: consts.rs  context.rs  defined.rs  scope.rs  system.rs
