[package]
name = "func_sharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"


[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
once_cell = "1.17.1"
pest = "2.5.7"
pest_derive = "2.5.7"
strum = "0.24.1"
strum_macros = "0.24.3"
